homepage dummy content added

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,26 +2,150 @@
 layout: default
 ---
 
-<div class="home">
 
-  <h1 class="page-heading">Posts</h1>
 
-  
-  {{ content }}
-
-  <ul class="post-list">
-    {% for post in site.posts %}
-      <li>
-        {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
-
-        <h2>
-          <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
-        </h2>
-      </li>
-    {% endfor %}
-  </ul>
-
-  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
-
+<div class="jumbotron jumbotron-fluid eq-height" style="background-image:url('https://res.cloudinary.com/solar-innovations-inc/image/upload/v1515513129/conservatories/czoc5dsdnk2nisnagdzt.jpg');background-size:cover;background-position:center;  height: 100vh; color:white;">
+  <div class="container bottom text-center " style="background:rgba(0,0,0,.7); width:100%; max-width:none; text-shadow: rgb(0, 0, 0) 1px 2px;">
+    <h1 class="display-3">Planning Your Dream Conservatory</h1>
+    <p class="lead" style="font-weight:400; padding:1% 0;">Begin your conservatory jouney with us, from planning to completion!</p>
+    <!-- <hr class="my-4"> -->
+    <button type="button" class="btn btn-primary" style="background:rgb(26, 162, 176);border-color:rgb(26, 162, 176);">Get Started</button>
+    <button type="button" class="btn btn-outline-light">Learn More</button>
+  </div>
 </div>
+
+<section id="content " >
+  <div class="container-fluid whatare">
+    <div class="container" >
+      <div class="row h-100 py-5" style="margin:3% 0px;">
+        <div class="col-12 col-md-6 col-lg-9 my-auto">
+          <h2>What are Conservatories?</h2>
+          <p>Conservatories are rooms constructed of glass roofs and walls that are typically attached to one wall of a house. Conservatories originated in the 16th century when wealthy landowners sought to grow citrus fruits they could only get from the Mediterranean. By the late 19th century conservatories were also being used to host social events, such as tea parties.</p>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3 my-auto">
+          <img src="http://res.cloudinary.com/solar-innovations-inc/image/upload/v1515513327/conservatories/q4bicx7wfptpa6r9ubj8.jpg" class="img-fluid rounded ">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid" >
+    <h2 class="text-center display-3">Multi-Functional</h2>
+    <div class="row">
+      <div class="col-12" >
+        <div class="container">
+          <div class="row py-4" >
+            <div class="col-12 col-md-3 my-auto">
+              <img src="https://res.cloudinary.com/solar-innovations-inc/image/upload/v1515513337/conservatories/cbub82fi9mctbd3ovuap.jpg" class="img-fluid rounded ">
+            </div>
+            <div class="col-12 col-md-6 my-auto">
+              <h3 >Entertaining</h3>
+              <p>Conservatories' ambiance makes for perfect and versatile entertainment spaces.Extensive views can be experienced with year-round functionality.</p>
+              
+              <p class="mb-0">The conservatory can play host to numerous gatherings without concerns of inclement weather.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+      <div class="col-12 py-4" >
+        <div class="container">
+          <div class="row justify-content-end">
+            <div class="col-12 col-md-6 my-auto">
+              <h3>Sport and Aquatic Enclosures</h3>
+              <p class="mb-0">Enclose your pool or spa for year-round utilization with a conservatory. You may even save time and money by eliminating the winterization of your pool!</p>          
+            </div>
+            <div class="col-12  col-md-3 my-auto">
+              <img src="water-feature-conservatory.jpg" class="img-fluid rounded ">
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 py-4" >
+        <div class="container">
+          <div class="row ">
+            <div class="col-12  col-md-3 my-auto">
+              <img src="commercial-conservatory.jpg" class="img-fluid rounded ">
+            </div>
+            <div class="col-12 col-md-6 my-auto">
+              <h3>Dining</h3>
+              <p>Conservatories can be used for formal and informal dining spaces. The natural light and scenery provides a relaxing place to enjoy meals.</p>
+              
+              <p class="mb-0">A conservatory can be designed to seamlessly transition into preexisting rooms by implementing matching flooring and decorative elements, such as window grids, molding, and finishes.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+      <div class="col-12 py-4" >
+        <div class="container">
+          <div class="row justify-content-end">
+            <div class="col-12 col-md-6 my-auto">
+                <h3>Showrooms and Sales</h3>
+                <p>Conservatories are a great place for businesses to showcase their products. The natural sunlight entering the space will reduce the need for artificial lighting, cutting costs.</p>
+                
+                <p class="mb-0">Large glass spans will allow customers to see products from the outdoors, helping to draw them in. Additionally, customers will be able to window shop and see inventory when the location is closed.</p>
+            </div>
+            <div class="col-12  col-md-3 my-auto">
+              <img src="lenIgn04.jpg" class="img-fluid rounded ">
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 py-4" >
+        <div class="container">
+          <div class="row ">
+            <div class="col-12  col-md-3 my-auto">
+              <img src="greenhouse-conservatory.jpg" class="img-fluid rounded ">
+            </div>
+            <div class="col-12 col-md-9 my-auto">
+              <h3>Growing</h3>
+              <p>Greenhouse conservatories are designed with plant growth in mind. The type of plants that a customer wishes to grow will dictate the design of the structure and accessories required.</p>
+              
+              <p>In some cases, specialty growing environments can be created. For example, orchids require a specific climate and light level to thrive. Zones can be created within the conservatory to accommodate various plant species and their ideal environments.</p>
+              
+              <p>Greenhouse conservatories are useful when propagating tropical trees such as orange, lemon, grapefruit, and kumquat trees. Ornamental flowering trees and plants can also be grown in this type of conservatory, including myrtles, oleanders, and white bird-of-paradise.</p>
+              
+              <pclass="mb-0">Palm greenhouses are similar to citrus greenhouses as they may require multiple zones to mimic a palm tree’s natural growing environment. Solar manufactures benches that are specifically designed to accommodate the height of palm trees.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section>
+  <div class="jumbotron jumbotron-fluid grad-orange" >
+    <div class="container">
+      <div class="row">
+        <div class="col-12  my-auto">
+          <h3 class="display-5 text-center " style="color:#fdf1e9;font-weight:900;">Ready to Begin Planning Your Conservatory?</h3>
+        </div>
+        <div class="col-12 my-auto text-center pt-3">
+            <button type="button" class="btn btn-outline-light btn-lg">Get Started</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</section>
+
+<section>
+  <!-- <a href="#"> -->
+  <div class="jumbotron jumbotron-fluid requestquote" >
+    <div class="container">
+      <div class="row">
+        <div class="col-3 my-auto text-center ">
+          <img src="logos/si_main_logo.png" class="img-fluid rounded ">
+        </div>
+        <div class="col-9  my-auto">
+          <h3 class="display-3 text-left " style="color:#428e42 ;font-weight:500;">Request a Quote</h3>
+          <p class="text-left" style="color:#7F7F7F;font-size:110%;">Work with Solar Innovations &#xae; to design and build your conservatory!</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- </a> -->
+</section>
