images added to home

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -55,7 +55,7 @@ layout: default
               <p class="mb-0">Enclose your pool or spa for year-round utilization with a conservatory. You may even save time and money by eliminating the winterization of your pool!</p>          
             </div>
             <div class="col-12  col-md-3 my-auto">
-              <img src="water-feature-conservatory.jpg" class="img-fluid rounded ">
+              <img src="https://res.cloudinary.com/solar-innovations-inc/image/upload/v1515514041/conservatories/rjbjnpupvyorfj8am3xf.jpg" class="img-fluid rounded ">
             </div>
           </div>
         </div>
@@ -65,7 +65,7 @@ layout: default
         <div class="container">
           <div class="row ">
             <div class="col-12  col-md-3 my-auto">
-              <img src="commercial-conservatory.jpg" class="img-fluid rounded ">
+              <img src="https://res.cloudinary.com/solar-innovations-inc/image/upload/v1515514128/conservatories/qmguofqavfwck7vn9cqa.jpg" class="img-fluid rounded ">
             </div>
             <div class="col-12 col-md-6 my-auto">
               <h3>Dining</h3>
@@ -87,7 +87,7 @@ layout: default
                 <p class="mb-0">Large glass spans will allow customers to see products from the outdoors, helping to draw them in. Additionally, customers will be able to window shop and see inventory when the location is closed.</p>
             </div>
             <div class="col-12  col-md-3 my-auto">
-              <img src="lenIgn04.jpg" class="img-fluid rounded ">
+              <img src="https://res.cloudinary.com/solar-innovations-inc/image/upload/v1515515241/conservatories/a9aexxgzjeslbi64jmj7.jpg" class="img-fluid rounded ">
             </div>
           </div>
         </div>
@@ -97,7 +97,7 @@ layout: default
         <div class="container">
           <div class="row ">
             <div class="col-12  col-md-3 my-auto">
-              <img src="greenhouse-conservatory.jpg" class="img-fluid rounded ">
+              <img src="https://res.cloudinary.com/solar-innovations-inc/image/upload/v1515515348/conservatories/dphv0pbocmpgaaewmmuh.jpg" class="img-fluid rounded ">
             </div>
             <div class="col-12 col-md-9 my-auto">
               <h3>Growing</h3>
