--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,9 @@
 
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
-
+  
+  <link rel="icon" href="https://res.cloudinary.com/solar-innovations-inc/image/upload/v1515513940/Logos/l1aqrnzlpsjlxotykcfy.png">
+  
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
