--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
-<footer class="site-footer">
+<footer class="footer">
 
-  <div class="wrapper">
+  <!-- <div class="wrapper">
 
     <h2 class="footer-heading">{{ site.title | escape }}</h2>
 
@@ -41,7 +41,51 @@
       </div>
     </div>
 
-  </div>
+  </div> -->
+
+
+  <div class="container-fluid" style=" padding-top:3%;">
+      <div class="row">
+        
+        <div class="col-4">
+            <div class="container-fluid text-center list-unstyled">
+              <div class="row">   
+                <div class="col-3 py-2"><a class="greenLink"target="_blank" href="https://twitter.com/SlrInnovations"><i class="fa fa-twitter-square fa-3x icon-grey" aria-hidden="true"></i></a></div>
+                <div class="col-3 py-2"><a class="greyLink"target="_blank" href="https://www.pinterest.com/slrinnovations/"><i class="fa fa-pinterest fa-3x" aria-hidden="true"></i></a></div>
+                <div class="col-3 py-2"><a class="greenLink"target="_blank" href="https://www.facebook.com/SolarInnovations/"><i class="fa fa-facebook-square fa-3x icon-grey" aria-hidden="true"></i></a></div>
+                <div class="col-3 py-2"><a class="greyLink"target="_blank" href="https://www.instagram.com/solarinnovations/"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a></div>
+                <div class="col-3 py-2"><a class="greyLink"target="_blank" href="https://www.houzz.com/pro/solar-innovations/solar-innovations%C2%AE-architectural-glazing-systems"><i class="fa fa-houzz fa-3x" aria-hidden="true"></i></a></div>
+                <div class="col-3 py-2"><a class="greenLink"target="_blank" href="https://www.linkedin.com/company/952435/"><i class="fa fa-linkedin-square fa-3x icon-grey" aria-hidden="true"></i></a></div>
+                <div class="col-3 py-2"><a class="greyLink"target="_blank" href="https://www.youtube.com/channel/UC38IQsAvIsxxjztdMZQtwHA"><i class="fa fa-youtube fa-3x" aria-hidden="true"></i></a></div>
+                <div class="col-3 py-2"><a class="greenLink"target="_blank" href="https://plus.google.com/+Solarinnovations/posts"><i class="fa fa-google-plus-square fa-3x icon-grey" aria-hidden="true"></i></a></div>
+              </div>
+            </div>
+        </div>
+        <div class="col-4 text-center">
+          <address>
+              <h4>Solar Innovations</h4>
+              <p>31 Roberts Road<br>
+              Pine Grove, Pennsylvania 17963</p>
+          </address>
+          <a class="greenLink" href="tel:18006180669">1-800-618-0669</a>
+        </div>
+        <div class="col-4">
+          <ul class="list-unstyled">
+            <li><a class="greenLink" href="https://solarinnovations.com/"><strong>Solar Innovations</strong></a></li>
+            <li><a class="greyLink" href="https://innovativereeltechnologies.com/" target="_blank">Innovative Reel Technologies</a></li>
+            <li><a class="greyLink" href="https://universal-clamp.com/" target="_blank">Universal Clamp</a></li>
+            <li><hr style="margin-top:.4rem;margin-bottom:.4rem"></li>
+            <li><a class="greyLink" href="https://solarinnovations.com/contact/" target="_blank">Contact</a></li>
+            <li><a class="greyLink" href="https://solarinnovations.com/careers/" target="_blank">Careers</a></li>
+            <li><a class="greyLink" href="https://solarinnovations.com/contact/terms-and-conditions-2/" target="_blank">Terms & Conditions</a></li>
+          </ul>
+        </div>
+        
+      </div>
+      <div class="col-12">
+      </div>
+    </div>
+    
 
 </footer>
 
