--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -138,7 +138,7 @@ layout: default
     <div class="container">
       <div class="row">
         <div class="col-3 my-auto text-center ">
-          <img src="logos/si_main_logo.png" class="img-fluid rounded ">
+          <!-- <img src="logos/si_main_logo.png" class="img-fluid rounded "> -->
         </div>
         <div class="col-9  my-auto">
           <h3 class="display-3 text-left " style="color:#428e42 ;font-weight:500;">Request a Quote</h3>
